--- a/GAT.ipynb
+++ b/GAT.ipynb
@@ -82,7 +82,7 @@
     "            self.fc = nn.Linear(\n",
     "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
     "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, out_feats * 2)))\n",
-    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "        self.softmax = nn.Softmax(dim=1)\n",
     "        self.feat_drop = nn.Dropout(feat_drop)\n",
     "        self.attn_drop = nn.Dropout(attn_drop)\n",
     "        self.leaky_relu = nn.LeakyReLU(negative_slope)\n",
@@ -136,7 +136,7 @@
     "                d = th.cat([edges.src['ft'], edges.dst['ft']], dim=-1)\n",
     "                e = (d * self.attn_fc).sum(dim=-1)\n",
     "                e = self.leaky_relu(e)\n",
-    "                return {'m': self.softmax(e), 'ft': edges.src['ft']}\n",
+    "                return {'m': e, 'ft': edges.src['ft']}\n",
     "            def reduce_func(nodes):\n",
     "                a = self.attn_drop(self.softmax(nodes.mailbox['m']).unsqueeze(-1))\n",
     "                data = (a * nodes.mailbox['ft']).sum(dim=1).reshape(nodes.batch_size(), -1)\n",
@@ -146,6 +146,7 @@
     "            graph.update_all(msg_func, reduce_func)\n",
     "            rst = graph.dstdata['h']\n",
     "            rst = rst.view(rst.shape[0], self._num_heads, self._out_feats)\n",
+    "            \n",
     "            # residual\n",
     "            if self.res_fc is not None:\n",
     "                resval = self.res_fc(h_dst).view(h_dst.shape[0], self._num_heads, self._out_feats)\n",
@@ -169,6 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tqdm\n",
+    "\n",
     "class GAT(nn.Module):\n",
     "    def __init__(self,\n",
     "                 in_feats,\n",
@@ -182,14 +185,17 @@
     "        super().__init__()\n",
     "        self.n_layers = n_layers\n",
     "        self.n_hidden = n_hidden\n",
+    "        self.num_heads = num_heads\n",
     "        self.n_classes = n_classes\n",
     "        self.layers = nn.ModuleList()\n",
     "        self.layers.append(GATConv(in_feats, n_hidden, num_heads, feat_drop=feat_drop, attn_drop=attn_drop,\n",
     "                                   activation=activation, residual=False))\n",
     "        for i in range(1, n_layers - 1):\n",
-    "            self.layers.append(GATConv(n_hidden * num_heads, n_hidden, num_heads, feat_drop=feat_drop, attn_drop=attn_drop,\n",
+    "            self.layers.append(GATConv(n_hidden * num_heads, n_hidden, num_heads,\n",
+    "                                       feat_drop=feat_drop, attn_drop=attn_drop,\n",
     "                                       activation=activation, residual=False))\n",
-    "        self.layers.append(GATConv(n_hidden * num_heads, n_classes, num_heads, feat_drop=feat_drop, attn_drop=attn_drop,\n",
+    "        self.layers.append(GATConv(n_hidden * num_heads, n_classes, num_heads,\n",
+    "                                   feat_drop=feat_drop, attn_drop=attn_drop,\n",
     "                                   activation=None, residual=False))\n",
     "\n",
     "    def forward(self, blocks, x):\n",
@@ -199,7 +205,41 @@
     "                h = layer(block, h).flatten(1)\n",
     "            else:\n",
     "                h = layer(block, h).mean(1)\n",
-    "        return h"
+    "        return h\n",
+    "    \n",
+    "    def inference(self, g, x, device):\n",
+    "        # During inference with sampling, multi-layer blocks are very inefficient because\n",
+    "        # lots of computations in the first few layers are repeated.\n",
+    "        # Therefore, we compute the representation of all nodes layer by layer.  The nodes\n",
+    "        # on each layer are of course splitted in batches.\n",
+    "        # TODO: can we standardize this?\n",
+    "        for l, layer in enumerate(self.layers):\n",
+    "            y = th.zeros(g.num_nodes(), self.n_hidden * self.num_heads if l != len(self.layers) - 1 else self.n_classes)\n",
+    "\n",
+    "            sampler = dgl.dataloading.MultiLayerFullNeighborSampler(1)\n",
+    "            dataloader = dgl.dataloading.NodeDataLoader(\n",
+    "                g,\n",
+    "                th.arange(g.num_nodes()),\n",
+    "                sampler,\n",
+    "                batch_size=10000,\n",
+    "                shuffle=True,\n",
+    "                drop_last=False,\n",
+    "                num_workers=4)\n",
+    "\n",
+    "            for input_nodes, output_nodes, blocks in dataloader:\n",
+    "                block = blocks[0]\n",
+    "\n",
+    "                block = block.int().to(device)\n",
+    "                h = x[input_nodes].to(device)\n",
+    "                if l < self.n_layers - 1:\n",
+    "                    h = layer(block, h).flatten(1)\n",
+    "                else:\n",
+    "                    h = layer(block, h).mean(1)\n",
+    "\n",
+    "                y[output_nodes] = h.cpu()\n",
+    "\n",
+    "            x = y\n",
+    "        return y"
    ]
   },
   {
@@ -210,13 +250,7 @@
    "source": [
     "from load_graph import load_reddit, load_ogb\n",
     "\n",
-    "gpu = -1\n",
     "dataset = 'reddit'\n",
-    "\n",
-    "if gpu >= 0:\n",
-    "    device = th.device('cuda:%d' % args.gpu)\n",
-    "else:\n",
-    "    device = th.device('cpu')\n",
     "\n",
     "if dataset == 'reddit':\n",
     "    g, n_classes = load_reddit()\n",
@@ -247,7 +281,7 @@
     "    labels = labels.long()\n",
     "    return (th.argmax(pred, dim=1) == labels).float().sum() / len(pred)\n",
     "\n",
-    "def evaluate(model, g, nfeat, labels, val_nid, device):\n",
+    "def evaluate(model, g, nfeat, labels, val_nid, test_nid, device):\n",
     "    \"\"\"\n",
     "    Evaluate the model on the validation set specified by ``val_nid``.\n",
     "    g : The entire graph.\n",
@@ -260,7 +294,9 @@
     "    with th.no_grad():\n",
     "        pred = model.inference(g, nfeat, device)\n",
     "    model.train()\n",
-    "    return compute_acc(pred[val_nid], labels[val_nid].to(pred.device))"
+    "    valid_acc = compute_acc(pred[val_nid], labels[val_nid].to(pred.device))\n",
+    "    test_acc = compute_acc(pred[test_nid], labels[test_nid].to(pred.device))\n",
+    "    return valid_acc, test_acc"
    ]
   },
   {
@@ -269,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fanout = [10, 10]\n",
+    "fanout = [15, 25]\n",
     "batch_size = 1000\n",
     "num_workers = 4\n",
     "num_hidden = 16\n",
@@ -277,9 +313,9 @@
     "num_layers = len(fanout)\n",
     "dropout = 0.5\n",
     "lr = 0.003\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "log_every = 20\n",
-    "eval_every = 100\n",
+    "eval_every = 5\n",
     "\n",
     "def load_subtensor(nfeat, labels, seeds, input_nodes, device):\n",
     "    \"\"\"\n",
@@ -353,10 +389,8 @@
     "        if epoch >= 5:\n",
     "            avg += toc - tic\n",
     "        if epoch % eval_every == 0 and epoch != 0:\n",
-    "            eval_acc = evaluate(model, val_g, val_nfeat, val_labels, val_nid, device)\n",
-    "            print('Eval Acc {:.4f}'.format(eval_acc))\n",
-    "            test_acc = evaluate(model, test_g, test_nfeat, test_labels, test_nid, device)\n",
-    "            print('Test Acc: {:.4f}'.format(test_acc))\n",
+    "            valid_acc, test_acc = evaluate(model, test_g, test_nfeat, test_labels, val_nid, test_nid, device)\n",
+    "            print('Eval Acc {:.4f}, Test Acc: {:.4f}'.format(valid_acc, test_acc))\n",
     "\n",
     "    print('Avg epoch time: {}'.format(avg / (epoch - 4)))"
    ]
@@ -364,9 +398,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "device = th.device('cuda:0')\n",
+    "#device = th.device('cpu')\n",
+    "\n",
     "run(device, data)"
    ]
   },
