add diff attention.

--- a/GAT.ipynb
+++ b/GAT.ipynb
@@ -21,6 +21,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class FCAttention(nn.Module):\n",
+    "    def __init__(self, num_heads, nfeats):\n",
+    "        super(FCAttention, self).__init__()\n",
+    "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, nfeats * 2)))\n",
+    "        \n",
+    "    def reset_parameters(self):\n",
+    "        gain = nn.init.calculate_gain('relu')\n",
+    "        nn.init.xavier_normal_(self.attn_fc, gain=gain)\n",
+    "        \n",
+    "    def forward(self, src_feat, dst_feat):\n",
+    "        d = th.cat([src_feat, dst_feat], dim=-1)\n",
+    "        return (d * self.attn_fc).sum(dim=-1)\n",
+    "\n",
+    "class DotAttention:\n",
+    "    def __init__(self, num_heads, nfeats):\n",
+    "        pass\n",
+    "    \n",
+    "    def reset_parameters(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def __call__(self, src_feat, dst_feat):\n",
+    "        d = src_feat + dst_feat\n",
+    "        return d.sum(dim=-1)\n",
+    "    \n",
+    "class Dot1Attention(nn.Module):\n",
+    "    def __init__(self, num_heads, nfeats):\n",
+    "        super(Dot1Attention, self).__init__()\n",
+    "        self.num_heads = num_heads\n",
+    "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, nfeats, nfeats)))\n",
+    "    \n",
+    "    def reset_parameters(self):\n",
+    "        gain = nn.init.calculate_gain('relu')\n",
+    "        nn.init.xavier_normal_(self.attn_fc, gain=gain)\n",
+    "    \n",
+    "    def __call__(self, src_feat, dst_feat):\n",
+    "        src_feat = src_feat.view(src_feat.shape[0], self.num_heads, 1, -1)\n",
+    "        src_feat = th.matmul(src_feat, self.attn_fc)\n",
+    "        src_feat = src_feat.view(src_feat.shape[0], self.num_heads, -1)\n",
+    "        d = src_feat + dst_feat\n",
+    "        return d.sum(dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from collections.abc import Mapping\n",
     "import dgl.function as fn\n",
     "\n",
@@ -55,7 +103,7 @@
     "        return input_, input_dst\n",
     "    else:\n",
     "        return input_, input_\n",
-    "\n",
+    "    \n",
     "class GATConv(nn.Module):\n",
     "    def __init__(self,\n",
     "                 in_feats,\n",
@@ -81,7 +129,10 @@
     "        else:\n",
     "            self.fc = nn.Linear(\n",
     "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
-    "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, out_feats * 2)))\n",
+    "        #self.attn = FCAttention(num_heads, out_feats)\n",
+    "        #self.attn = DotAttention(num_heads, out_feats)\n",
+    "        self.attn = Dot1Attention(num_heads, out_feats)\n",
+    "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, out_feats, out_feats)))\n",
     "        self.softmax = nn.Softmax(dim=1)\n",
     "        self.feat_drop = nn.Dropout(feat_drop)\n",
     "        self.attn_drop = nn.Dropout(attn_drop)\n",
@@ -108,8 +159,9 @@
     "        else:\n",
     "            nn.init.xavier_normal_(self.fc_src.weight, gain=gain)\n",
     "            nn.init.xavier_normal_(self.fc_dst.weight, gain=gain)\n",
-    "        nn.init.xavier_normal_(self.attn_fc, gain=gain)\n",
     "        nn.init.constant_(self.bias, 0)\n",
+    "        self.attn.reset_parameters()\n",
+    "        nn.init.xavier_normal_(self.attn_fc, gain=gain)\n",
     "        if isinstance(self.res_fc, nn.Linear):\n",
     "            nn.init.xavier_normal_(self.res_fc.weight, gain=gain)\n",
     "            \n",
@@ -133,8 +185,7 @@
     "                    feat_dst = feat_src[:graph.number_of_dst_nodes()]\n",
     "                    \n",
     "            def msg_func(edges):\n",
-    "                d = th.cat([edges.src['ft'], edges.dst['ft']], dim=-1)\n",
-    "                e = (d * self.attn_fc).sum(dim=-1)\n",
+    "                e = self.attn(edges.src['ft'], edges.dst['ft'])\n",
     "                e = self.leaky_relu(e)\n",
     "                return {'m': e, 'ft': edges.src['ft']}\n",
     "            def reduce_func(nodes):\n",
@@ -313,9 +364,9 @@
     "num_layers = len(fanout)\n",
     "dropout = 0.5\n",
     "lr = 0.003\n",
-    "num_epochs = 20\n",
+    "num_epochs = 100\n",
     "log_every = 20\n",
-    "eval_every = 5\n",
+    "eval_every = 1\n",
     "\n",
     "def load_subtensor(nfeat, labels, seeds, input_nodes, device):\n",
     "    \"\"\"\n",
