--- a/GAT.ipynb
+++ b/GAT.ipynb
@@ -122,16 +122,22 @@
     "        self._out_feats = out_feats\n",
     "        self._allow_zero_in_degree = allow_zero_in_degree\n",
     "        if isinstance(in_feats, tuple):\n",
-    "            self.fc_src = nn.Linear(\n",
+    "            self.q_src = nn.Linear(\n",
     "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
-    "            self.fc_dst = nn.Linear(\n",
+    "            self.v_src = nn.Linear(\n",
+    "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
+    "            self.k_dst = nn.Linear(\n",
     "                self._in_dst_feats, out_feats * num_heads, bias=False)\n",
     "        else:\n",
-    "            self.fc = nn.Linear(\n",
+    "            self.q_fc = nn.Linear(\n",
+    "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
+    "            self.v_fc = nn.Linear(\n",
+    "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
+    "            self.k_fc = nn.Linear(\n",
     "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
     "        #self.attn = FCAttention(num_heads, out_feats)\n",
-    "        #self.attn = DotAttention(num_heads, out_feats)\n",
-    "        self.attn = Dot1Attention(num_heads, out_feats)\n",
+    "        self.attn = DotAttention(num_heads, out_feats)\n",
+    "        #self.attn = Dot1Attention(num_heads, out_feats)\n",
     "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, out_feats, out_feats)))\n",
     "        self.softmax = nn.Softmax(dim=1)\n",
     "        self.feat_drop = nn.Dropout(feat_drop)\n",
@@ -154,11 +160,9 @@
     "        \n",
     "    def reset_parameters(self):\n",
     "        gain = nn.init.calculate_gain('relu')\n",
-    "        if hasattr(self, 'fc'):\n",
-    "            nn.init.xavier_normal_(self.fc.weight, gain=gain)\n",
-    "        else:\n",
-    "            nn.init.xavier_normal_(self.fc_src.weight, gain=gain)\n",
-    "            nn.init.xavier_normal_(self.fc_dst.weight, gain=gain)\n",
+    "        nn.init.xavier_normal_(self.k_fc.weight, gain=gain)\n",
+    "        nn.init.xavier_normal_(self.q_fc.weight, gain=gain)\n",
+    "        nn.init.xavier_normal_(self.v_fc.weight, gain=gain)\n",
     "        nn.init.constant_(self.bias, 0)\n",
     "        self.attn.reset_parameters()\n",
     "        nn.init.xavier_normal_(self.attn_fc, gain=gain)\n",
@@ -170,29 +174,26 @@
     "            if isinstance(feat, tuple):\n",
     "                h_src = self.feat_drop(feat[0])\n",
     "                h_dst = self.feat_drop(feat[1])\n",
-    "                if not hasattr(self, 'fc_src'):\n",
-    "                    feat_src = self.fc(h_src).view(-1, self._num_heads, self._out_feats)\n",
-    "                    feat_dst = self.fc(h_dst).view(-1, self._num_heads, self._out_feats)\n",
-    "                else:\n",
-    "                    feat_src = self.fc_src(h_src).view(-1, self._num_heads, self._out_feats)\n",
-    "                    feat_dst = self.fc_dst(h_dst).view(-1, self._num_heads, self._out_feats)\n",
     "            else:\n",
-    "                h_src = h_dst = self.feat_drop(feat)\n",
-    "                tmp = self.fc(h_src)\n",
-    "                feat_src = feat_dst = tmp.view(\n",
-    "                    -1, self._num_heads, self._out_feats)\n",
     "                if graph.is_block:\n",
-    "                    feat_dst = feat_src[:graph.number_of_dst_nodes()]\n",
-    "                    \n",
+    "                    h_dst = self.feat_drop(feat[:graph.number_of_dst_nodes()])\n",
+    "                    h_src = self.feat_drop(feat)\n",
+    "                else:\n",
+    "                    h_dst = h_src = self.feat_drop(feat)\n",
+    "            feat_src = self.q_fc(h_src).view(-1, self._num_heads, self._out_feats)\n",
+    "            feat_dst = self.k_fc(h_dst).view(-1, self._num_heads, self._out_feats)\n",
+    "            val_src = self.v_fc(h_src).view(-1, self._num_heads, self._out_feats)\n",
+    "\n",
     "            def msg_func(edges):\n",
     "                e = self.attn(edges.src['ft'], edges.dst['ft'])\n",
     "                e = self.leaky_relu(e)\n",
-    "                return {'m': e, 'ft': edges.src['ft']}\n",
+    "                return {'m': e, 'v': edges.src['v']}\n",
     "            def reduce_func(nodes):\n",
     "                a = self.attn_drop(self.softmax(nodes.mailbox['m']).unsqueeze(-1))\n",
-    "                data = (a * nodes.mailbox['ft']).sum(dim=1).reshape(nodes.batch_size(), -1)\n",
+    "                data = (a * nodes.mailbox['v']).sum(dim=1).reshape(nodes.batch_size(), -1)\n",
     "                return {'h': data}\n",
     "            graph.srcdata.update({'ft': feat_src})\n",
+    "            graph.srcdata.update({'v': val_src})\n",
     "            graph.dstdata.update({'ft': feat_dst})\n",
     "            graph.update_all(msg_func, reduce_func)\n",
     "            rst = graph.dstdata['h']\n",
@@ -363,10 +364,10 @@
     "num_heads = 2\n",
     "num_layers = len(fanout)\n",
     "dropout = 0.5\n",
-    "lr = 0.003\n",
+    "lr = 0.001\n",
     "num_epochs = 100\n",
     "log_every = 20\n",
-    "eval_every = 1\n",
+    "eval_every = 5\n",
     "\n",
     "def load_subtensor(nfeat, labels, seeds, input_nodes, device):\n",
     "    \"\"\"\n",
