use original GAT.

--- a/GAT-PE.ipynb
+++ b/GAT-PE.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "import tqdm\n",
-    "#from dgl.nn import GATConv\n",
+    "from dgl.nn import GATConv\n",
     "\n",
     "class GAT(nn.Module):\n",
     "    def __init__(self,\n",
