--- a/GAT-PE.ipynb
+++ b/GAT-PE.ipynb
@@ -310,6 +310,7 @@
     "    g, n_classes = load_reddit()\n",
     "elif dataset == 'ogbn-products':\n",
     "    g, n_classes = load_ogb('ogbn-products')\n",
+    "    g = dgl.add_self_loop(g)\n",
     "else:\n",
     "    raise Exception('unknown dataset')\n",
     "\n",
