--- a/GAT.ipynb
+++ b/GAT.ipynb
@@ -42,7 +42,7 @@
     "        pass\n",
     "    \n",
     "    def __call__(self, src_feat, dst_feat):\n",
-    "        d = src_feat + dst_feat\n",
+    "        d = src_feat * dst_feat\n",
     "        return d.sum(dim=-1)\n",
     "    \n",
     "class Dot1Attention(nn.Module):\n",
@@ -59,7 +59,7 @@
     "        src_feat = src_feat.view(src_feat.shape[0], self.num_heads, 1, -1)\n",
     "        src_feat = th.matmul(src_feat, self.attn_fc)\n",
     "        src_feat = src_feat.view(src_feat.shape[0], self.num_heads, -1)\n",
-    "        d = src_feat + dst_feat\n",
+    "        d = src_feat * dst_feat\n",
     "        return d.sum(dim=-1)"
    ]
   },
@@ -136,8 +136,8 @@
     "            self.k_fc = nn.Linear(\n",
     "                self._in_src_feats, out_feats * num_heads, bias=False)\n",
     "        #self.attn = FCAttention(num_heads, out_feats)\n",
-    "        self.attn = DotAttention(num_heads, out_feats)\n",
-    "        #self.attn = Dot1Attention(num_heads, out_feats)\n",
+    "        #self.attn = DotAttention(num_heads, out_feats)\n",
+    "        self.attn = Dot1Attention(num_heads, out_feats)\n",
     "        self.attn_fc = nn.Parameter(th.FloatTensor(size=(1, num_heads, out_feats, out_feats)))\n",
     "        self.softmax = nn.Softmax(dim=1)\n",
     "        self.feat_drop = nn.Dropout(feat_drop)\n",
@@ -273,7 +273,7 @@
     "                g,\n",
     "                th.arange(g.num_nodes()),\n",
     "                sampler,\n",
-    "                batch_size=10000,\n",
+    "                batch_size=1000,\n",
     "                shuffle=True,\n",
     "                drop_last=False,\n",
     "                num_workers=4)\n",
@@ -359,7 +359,7 @@
    "source": [
     "fanout = [15, 25]\n",
     "batch_size = 1000\n",
-    "num_workers = 4\n",
+    "num_workers = 0\n",
     "num_hidden = 16\n",
     "num_heads = 2\n",
     "num_layers = len(fanout)\n",
@@ -367,7 +367,7 @@
     "lr = 0.001\n",
     "num_epochs = 100\n",
     "log_every = 20\n",
-    "eval_every = 5\n",
+    "eval_every = 20\n",
     "\n",
     "def load_subtensor(nfeat, labels, seeds, input_nodes, device):\n",
     "    \"\"\"\n",
@@ -441,8 +441,10 @@
     "        if epoch >= 5:\n",
     "            avg += toc - tic\n",
     "        if epoch % eval_every == 0 and epoch != 0:\n",
+    "            start = time.time()\n",
     "            valid_acc, test_acc = evaluate(model, test_g, test_nfeat, test_labels, val_nid, test_nid, device)\n",
-    "            print('Eval Acc {:.4f}, Test Acc: {:.4f}'.format(valid_acc, test_acc))\n",
+    "            print('Eval Acc {:.4f}, Test Acc: {:.4f}, time: {:.4f} seconds'.format(valid_acc, test_acc,\n",
+    "                                                                                   time.time() - start))\n",
     "\n",
     "    print('Avg epoch time: {}'.format(avg / (epoch - 4)))"
    ]
